--- a/src/components/Menu/styles.css
+++ b/src/components/Menu/styles.css
@@ -40,6 +40,44 @@
       padding-top: var(--bodyPaddingTop);
     }
   }
+  h1 {
+    height: 94px;
+    padding-top: 25px;
+    color: rgb(197, 197, 197);
+    font-size: 30px;
+    cursor: pointer;
+  }
+  h1:hover {
+    color: white;
+  }
+  .UserOptions {
+    background-color: black;
+    color: rgb(197, 197, 197);;
+    width: 200px;
+    padding: 15px;
+    position: absolute;
+      top: 92px;
+      right: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+    border-radius: 0 0 10px 10px;
+    border: 2px solid var(--primary);
+  }
+
+  .options {
+    width: 170px;
+    text-align: center;
+    font-size: 28px;
+    text-decoration: none;
+    border-radius: 5px;
+  }
+  .options:hover {
+    background-color: rgb(51, 51, 51);
+    color: white;
+  }
   
   
   @media (max-width: 800px) {
