--- a/src/components/Menu/styles.css
+++ b/src/components/Menu/styles.css
@@ -30,16 +30,6 @@
     --bodyPaddingTop: 94px;
     padding-top: var(--bodyPaddingTop);
   }
-  @media (max-width: 800px) {
-    .Menu {
-      height: 40px;
-      justify-content: center;
-    }
-    body {
-      --bodyPaddingTop: 40px;
-      padding-top: var(--bodyPaddingTop);
-    }
-  }
   h1 {
     height: 94px;
     padding-top: 25px;
@@ -78,6 +68,37 @@
     background-color: rgb(51, 51, 51);
     color: white;
   }
+  @media (max-width: 800px) {
+    .Menu {
+      height: 40px;
+      justify-content: center;
+    }
+    body {
+      --bodyPaddingTop: 40px;
+      padding-top: var(--bodyPaddingTop);
+      height: 100vh;
+      background-color: black;
+    }
+    h1 {
+      padding-top: 0;
+      height: 40px;
+      position: absolute;
+        top: -20px;
+        right: 10px;
+      font-size: 28px;
+    }
+    .UserOptions {
+      width: 150px;
+      position: absolute;
+      top: 39px;
+      right: 0px;
+      padding: 5px;
+    }
+    .options {
+      width: 140px;
+    }
+  }
+  
   
   
   @media (max-width: 800px) {
